jacket.yaml
apiVersion: v1
kind: Pod
metadata:
  name: jacket-pod
  namespace: ingress-nginx
  labels:
    app: jacket
spec:
  containers:
    - name: jacket
      image: azakg/jacket-site:latest
      ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: jacket-service
  namespace: ingress-nginx
spec:
  selector:
    app: jacket
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
