ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: clothing-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: main-service
            port:
              number: 80
      - path: /jacket
        pathType: Prefix
        backend:
          service:
            name: jacket-service
            port:
              number: 80
      - path: /boots
        pathType: Prefix
        backend:
          service:
            name: boots-service
            port:
              number: 80
